// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Typography placeholder renders correctly 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <View
    style={
      Object {
        "alignSelf": "stretch",
        "backgroundColor": "#A5A5A5",
        "borderRadius": 16,
        "height": 16,
        "width": "100%",
      }
    }
  />,
]
`;

exports[`The Typography placeholder translates type styles 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <View
    style={
      Object {
        "alignSelf": "stretch",
        "backgroundColor": "#A5A5A5",
        "borderRadius": 16,
        "height": 24,
        "marginVertical": 4,
        "width": "100%",
      }
    }
  />,
]
`;
